--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,11 @@
     	</div>
     	<header>
     		<h1>Welcome to UU's DANA!</h1>
-    		<p>You can ask DANA questions and DANA will try to give you the best answers. Try asking her about Utrecht University minors!</p>
+    		<p>You can ask DANA questions and DANA will try to give you the best answers. 
+                   Try asking her about Utrecht University minors!
+                   <br>This is a proof of concept. Verify your findings at 
+                   <a target="_blank" href="https://students.uu.nl">students.uu.nl</a>.
+                </p>
     	</header>
 	    <div id="qawrap">
 	    	<div id="message-container">
